src/test/resources/compilation_error/illegal_application_error_1.funcky
foo = "funcky:numbers".add "funcky:booleans".false
